# yagura

./: .gitignore  .yagura.example.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: app.rs  config.rs  event.rs  lib.rs  main.rs  model.rs  process.rs  ui.rs
src/app/: model.rs  usecase.rs
src/app/model/: add_command.rs  app.rs  command.rs  form.rs  init.rs  output_buffer.rs  output_line.rs  quit.rs  select.rs  ui_state.rs
src/app/model/app/: add_command.rs  add_output_line.rs  command_ops.rs  (+5 more)
src/app/usecase/: add_command.rs
src/event/: handle_adding_command_mode.rs  handle_deleting_command_mode.rs  handle_key_event.rs  handle_normal_mode.rs
src/model/: app.rs  command.rs  output_line.rs  ui_state.rs
src/model/app/: command_actions.rs  command_log.rs  command_ops.rs  command_selection.rs  init.rs  mark_command.rs  quit.rs  select.rs  usecase.rs
src/model/command/: mark.rs
src/model/ui_state/: adding_command_form.rs  command_list.rs  command_log.rs
src/process/: command.rs  exit_code.rs  output_buffer.rs  pid.rs  process_manager.rs
src/process/command/: model.rs
src/process/process_manager/: init.rs  on_process_existed.rs  shutdown_all.rs  spawn.rs  stop.rs
src/ui/: add_command_dialog.rs  command_list.rs  command_list_area_help_bar.rs  delete_command_dialog.rs  frame_context.rs  help_bar.rs  output_area.rs  output_area_help_bar.rs  render.rs  split_layout.rs  test_helpers.rs  viewport_metrics.rs
src/ui/command_list/: display_status.rs  format_elapsed_time.rs  format_pid.rs  list_item.rs  render.rs  truncate_string.rs
(+7 files in other folders)
