[package]
name = "yagura"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
crossterm = "0.29.0"
nix = { version = "0.31.1", features = ["signal", "process"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.18"
shlex = "1.3.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
unicode-width = "0.2.2"
uuid = { version = "1.19.0", features = ["v7"] }
